Configuração para uso do identity

--- a/DemoMinimalAPI/appsettings.json
+++ b/DemoMinimalAPI/appsettings.json
@@ -10,5 +10,12 @@
     "DefaultConnection": "Data Source=MinimalAppDemo.db"
   },
 
+  "AppJwtSettings": {
+    "SecretKey": "MYSECRETSUPERSECRET",
+    "Expirarion": 2,
+    "Issuer": "MinimalPilot",
+    "Audience": "https://localhost"
+  },
+
   "AllowedHosts": "*"
 }
