--- a/DemoMinimalAPI/DemoMinimalAPI.csproj
+++ b/DemoMinimalAPI/DemoMinimalAPI.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="MiniValidation" Version="0.9.2" />
+    <PackageReference Include="NetDevPack.Identity" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
